--- a/config.json
+++ b/config.json
@@ -1,35 +1,262 @@
 {
   "Images": [
-    ".jpg", ".jpeg", ".png", ".gif", ".bmp", ".svg", ".webp", ".tiff", ".ico", ".raw"
+    ".jpg",
+    ".jpeg",
+    ".png",
+    ".gif",
+    ".bmp",
+    ".svg",
+    ".webp",
+    ".tiff",
+    ".ico",
+    ".raw",
+    ".heic",
+    ".heif",
+    ".cr2",
+    ".nef",
+    ".arw",
+    ".dng",
+    ".orf",
+    ".rw2",
+    ".psd",
+    ".ai",
+    ".eps",
+    ".indd"
   ],
   "Documents": [
-    ".pdf", ".doc", ".docx", ".txt", ".rtf", ".odt", ".pages", ".md", ".tex"
+    ".pdf",
+    ".doc",
+    ".docx",
+    ".txt",
+    ".rtf",
+    ".odt",
+    ".pages",
+    ".md",
+    ".tex",
+    ".epub",
+    ".mobi",
+    ".azw",
+    ".azw3",
+    ".fb2",
+    ".djvu",
+    ".xps",
+    ".oxps",
+    ".cbr",
+    ".cbz",
+    ".log"
   ],
   "Videos": [
-    ".mp4", ".avi", ".mov", ".wmv", ".flv", ".webm", ".mkv", ".m4v", ".3gp"
+    ".mp4",
+    ".avi",
+    ".mov",
+    ".wmv",
+    ".flv",
+    ".webm",
+    ".mkv",
+    ".m4v",
+    ".3gp",
+    ".mpg",
+    ".mpeg",
+    ".m2v",
+    ".vob",
+    ".ogv",
+    ".ts",
+    ".mts",
+    ".m2ts",
+    ".divx",
+    ".xvid",
+    ".rm",
+    ".rmvb",
+    ".asf"
   ],
   "Audio": [
-    ".mp3", ".wav", ".flac", ".aac", ".ogg", ".m4a", ".wma", ".opus", ".aiff"
+    ".mp3",
+    ".wav",
+    ".flac",
+    ".aac",
+    ".ogg",
+    ".m4a",
+    ".wma",
+    ".opus",
+    ".aiff",
+    ".au",
+    ".mid",
+    ".midi",
+    ".ape",
+    ".alac",
+    ".dsd",
+    ".pcm",
+    ".amr",
+    ".ac3",
+    ".mka",
+    ".ra"
   ],
   "Archives": [
-    ".zip", ".rar", ".7z", ".tar", ".gz", ".bz2", ".xz", ".tar.gz", ".tar.bz2"
+    ".zip",
+    ".rar",
+    ".7z",
+    ".tar",
+    ".gz",
+    ".bz2",
+    ".xz",
+    ".tar.gz",
+    ".tar.bz2",
+    ".cab",
+    ".iso",
+    ".img",
+    ".dmg",
+    ".pkg",
+    ".deb",
+    ".rpm",
+    ".zipx",
+    ".lz",
+    ".lzma",
+    ".z",
+    ".tgz",
+    ".tbz2",
+    ".tar.xz",
+    ".arj",
+    ".ace"
   ],
   "Code": [
-    ".py", ".js", ".html", ".css", ".java", ".cpp", ".c", ".php", ".rb", ".go", ".rs", ".ts", ".jsx", ".tsx", ".vue", ".svelte"
+    ".py",
+    ".js",
+    ".html",
+    ".css",
+    ".java",
+    ".cpp",
+    ".c",
+    ".php",
+    ".rb",
+    ".go",
+    ".rs",
+    ".ts",
+    ".jsx",
+    ".tsx",
+    ".vue",
+    ".svelte",
+    ".swift",
+    ".kt",
+    ".scala",
+    ".sh",
+    ".bash",
+    ".zsh",
+    ".fish",
+    ".ps1",
+    ".bat",
+    ".cmd",
+    ".r",
+    ".m",
+    ".pl",
+    ".lua",
+    ".dart",
+    ".elm",
+    ".ex",
+    ".exs",
+    ".clj",
+    ".cljs",
+    ".hs",
+    ".ml",
+    ".fs",
+    ".vb",
+    ".cs",
+    ".xml",
+    ".json",
+    ".yaml",
+    ".yml",
+    ".toml",
+    ".ini",
+    ".cfg",
+    ".sql",
+    ".gradle",
+    ".make",
+    ".cmake"
   ],
   "Spreadsheets": [
-    ".xls", ".xlsx", ".csv", ".ods", ".numbers", ".tsv"
+    ".xls",
+    ".xlsx",
+    ".csv",
+    ".ods",
+    ".numbers",
+    ".tsv",
+    ".xlsm",
+    ".xlsb",
+    ".xltx",
+    ".xltm",
+    ".xlam",
+    ".ots"
   ],
   "Presentations": [
-    ".ppt", ".pptx", ".odp", ".key"
+    ".ppt",
+    ".pptx",
+    ".odp",
+    ".key",
+    ".pptm",
+    ".pps",
+    ".ppsx",
+    ".pot",
+    ".potx",
+    ".otp"
   ],
   "Executables": [
-    ".exe", ".msi", ".deb", ".rpm", ".dmg", ".app", ".run", ".bin"
+    ".exe",
+    ".msi",
+    ".deb",
+    ".rpm",
+    ".dmg",
+    ".app",
+    ".run",
+    ".bin",
+    ".apk",
+    ".ipa",
+    ".appx",
+    ".jar",
+    ".war",
+    ".ear",
+    ".com",
+    ".bat",
+    ".sh"
   ],
   "Fonts": [
-    ".ttf", ".otf", ".woff", ".woff2", ".eot"
+    ".ttf",
+    ".otf",
+    ".woff",
+    ".woff2",
+    ".eot",
+    ".fon",
+    ".fnt",
+    ".ttc",
+    ".dfont",
+    ".suit",
+    ".pfb",
+    ".pfm",
+    ".afm",
+    ".bdf"
   ],
   "3D_Models": [
-    ".obj", ".fbx", ".dae", ".3ds", ".blend", ".stl", ".ply"
+    ".obj",
+    ".fbx",
+    ".dae",
+    ".3ds",
+    ".blend",
+    ".stl",
+    ".ply",
+    ".max",
+    ".ma",
+    ".mb",
+    ".c4d",
+    ".skp",
+    ".3dm",
+    ".sldprt",
+    ".sldasm",
+    ".step",
+    ".stp",
+    ".iges",
+    ".igs",
+    ".gltf",
+    ".glb",
+    ".usd",
+    ".usda",
+    ".usdc"
   ]
 }
