--- a/examples/extended_config.json
+++ b/examples/extended_config.json
@@ -1,15 +1,153 @@
 {
-    "Images": [".jpg", ".png", ".gif"],
-    "Documents": [".pdf", ".txt"],
-    "Other": [],
-    "Archives": [".zip", ".rar"],
-    "Code": [".py", ".js", ".html", ".css", ".java"],
-    "Videos": [".mp4", ".mov", ".avi"],
-    "Audio": [".mp3", ".wav", ".m4a"],
-    "Spreadsheets": [".xls", ".xlsx", ".csv"],
-    "Presentations": [".ppt", ".pptx"],
-    "Executables": [".exe", ".msi", ".deb"],
-    "Fonts": [".ttf", ".otf"],
-    "3D_Models": [".obj", ".fbx", ".dae", ".3ds", ".blend", ".stl", ".ply"]
-  }
-  
+  "Images": [
+    ".jpg",
+    ".jpeg",
+    ".png",
+    ".gif",
+    ".bmp",
+    ".svg",
+    ".webp",
+    ".tiff",
+    ".heic",
+    ".heif",
+    ".raw",
+    ".cr2",
+    ".nef",
+    ".arw",
+    ".dng",
+    ".psd",
+    ".ai"
+  ],
+  "Documents": [
+    ".pdf",
+    ".doc",
+    ".docx",
+    ".txt",
+    ".rtf",
+    ".odt",
+    ".pages",
+    ".epub",
+    ".mobi",
+    ".azw",
+    ".azw3",
+    ".md",
+    ".tex",
+    ".log"
+  ],
+  "Videos": [
+    ".mp4",
+    ".avi",
+    ".mov",
+    ".wmv",
+    ".flv",
+    ".webm",
+    ".mkv",
+    ".mpg",
+    ".mpeg",
+    ".m4v",
+    ".3gp",
+    ".ogv",
+    ".vob"
+  ],
+  "Audio": [
+    ".mp3",
+    ".wav",
+    ".flac",
+    ".aac",
+    ".ogg",
+    ".m4a",
+    ".wma",
+    ".au",
+    ".aiff",
+    ".mid",
+    ".midi",
+    ".opus"
+  ],
+  "Archives": [
+    ".zip",
+    ".rar",
+    ".7z",
+    ".tar",
+    ".gz",
+    ".bz2",
+    ".xz",
+    ".cab",
+    ".iso",
+    ".img",
+    ".tar.gz",
+    ".tar.bz2"
+  ],
+  "Code": [
+    ".py",
+    ".js",
+    ".html",
+    ".css",
+    ".java",
+    ".cpp",
+    ".c",
+    ".php",
+    ".rb",
+    ".go",
+    ".swift",
+    ".kt",
+    ".scala",
+    ".rs",
+    ".ts",
+    ".jsx",
+    ".tsx",
+    ".sh",
+    ".bash",
+    ".json",
+    ".xml",
+    ".yaml",
+    ".yml",
+    ".sql"
+  ],
+  "Spreadsheets": [
+    ".xls",
+    ".xlsx",
+    ".csv",
+    ".ods",
+    ".numbers",
+    ".tsv",
+    ".xlsm"
+  ],
+  "Presentations": [
+    ".ppt",
+    ".pptx",
+    ".odp",
+    ".key",
+    ".pps",
+    ".ppsx"
+  ],
+  "Executables": [
+    ".exe",
+    ".msi",
+    ".deb",
+    ".rpm",
+    ".dmg",
+    ".app",
+    ".apk",
+    ".jar"
+  ],
+  "Fonts": [
+    ".ttf",
+    ".otf",
+    ".woff",
+    ".woff2",
+    ".eot",
+    ".fon"
+  ],
+  "3D_Models": [
+    ".obj",
+    ".fbx",
+    ".dae",
+    ".3ds",
+    ".blend",
+    ".stl",
+    ".ply",
+    ".gltf",
+    ".glb"
+  ],
+  "Other": []
+}
